# app/Http/Resources/OrderPublicResource.php
@@ -1,0 +1,24 @@
+<?php
+
+namespace App\Http\Resources;
+
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class OrderPublicResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @param  \Illuminate\Http\Request  $request
+     * @return array
+     */
+    public function toArray($request)
+    {
+        return [
+            'code' => $this->code,
+            'payment_status' => $this->payment_status,
+            'shop_status' => $this->shop_status,
+            'delivery_status' => $this->delivery_status,
+        ];
+    }
+}
