# app/Http/Resources/OrderResource.php
@@ -24,6 +24,9 @@ class OrderResource extends JsonResource
             'code' => $this->code,
             'email' => $this->email,
             'comment' => $this->comment,
+            'payment_status' => $this->payment_status,
+            'shop_status' => $this->shop_status,
+            'delivery_status' => $this->delivery_status,
             'shipping_method' => new ShippingMethodResource($this->shippingMethod),
             'items' => OrderItemResource::collection($this->items),
             'delivery_address' => new AddressResource($this->deliveryAddress),
